--- a/package.json
+++ b/package.json
@@ -11,26 +11,46 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.18.4",
+    "@formatjs/intl-localematcher": "^0.2.32",
+    "@hookform/resolvers": "^3.1.0",
     "@polygon.io/client-js": "^7.2.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "drizzle-orm": "^0.26.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "lucide-react": "^0.221.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.3",
+    "next-themes": "^0.2.1",
     "pg": "^8.11.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.1",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.1",
     "@types/pg": "^8.10.1",
     "drizzle-kit": "^0.18.0",
     "eslint-config-prettier": "^8.8.0",
